<resources>
    <string name="app_name">Homework_6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty">empty</string>
    <string name="about">Это очень крутая записная книжка, но в неё лучше ничего не записывать</string>
    <string name="switch_on_dark_theme">Включить Dark Theme</string>
    <string name="switch_on_light_theme">Включить Light Theme</string>
    <string name="purple_theme">Включить Purple Theme</string>
    <string name="blue_theme">Включить Blue Theme</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="nickname">Василий Топоров</string>
    <string name="email">vasya777@mail.ru</string>
    <string name="plug_message">Переходим на другой фрагмент</string>
    <string name="switch_on_purple_theme">Включить Purple Theme</string>
    <string name="switch_on_blue_theme">Включить Blue Theme</string>
    <string name="dark_theme_applyed">Dark Theme установлена</string>
    <string name="light_theme_applyed">Light Theme установлена</string>
    <string name="purple_theme_applyed">Purple Theme установлена</string>
    <string name="blue_theme_applyed">Blue Theme установлена</string>
    <string name="addNote">Добавить заметку</string>
    <string name="date">10 Декабря, Пн</string>
    <string name="setDate">Установить дату</string>
    <string name="header">Заголовок</string>
    <string name="Description">Описание</string>
    <string name="add_new_Notebutton">+ Новая заметка</string>
    <string name="myNotes">Мои заметки</string>
    <string name="tetx_delete_note">Удалить заметку</string>
    <string name="text_header">Header</string>
    <string name="text_description">Description</string>
    <string name="text_new_note">+ Новая заметка</string>
    <string name="text_my_notes">Мои заметки</string>
    <string name="text_go_to_notes">К списку заметок</string>
    <string name="text_about">О приложении</string>
    <string name="text_settings">Настройки</string>
    <string name="text_delete_context">Удалить</string>
    <string name="text_change_context">Изменить</string>
    <string name="TitleEditText">Название</string>
    <string name="editTextDescription">Введите текст здесь</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="exit_text">Выйти</string>
    <string name="continue_text">Продолжить</string>

</resources>