<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsFragment"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textViewDarkTheme"
       android:layout_marginTop="@dimen/margin_top_textViewDarkTheme"
        android:layout_marginStart="@dimen/margin_start_themes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_Themes"
        android:text="@string/switch_on_dark_theme" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch1"
        android:layout_marginTop="@dimen/margin_top_themes"
        android:layout_marginStart="@dimen/margin_start_themes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/textViewLightTheme"
        android:layout_marginTop="@dimen/margin_top_themes"
        android:layout_marginStart="@dimen/margin_start_themes"
        android:textSize="@dimen/textSize_Themes"
        android:text="@string/switch_on_light_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch2"
        android:layout_marginTop="@dimen/margin_top_themes"
        android:layout_marginStart="@dimen/margin_start_themes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/textViewPurpleTheme"
        android:layout_marginTop="@dimen/margin_top2_themes"
        android:layout_marginStart="@dimen/margin_start_themes"
        android:textSize="@dimen/textSize_Themes"
        android:text="@string/switch_on_purple_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch3"
        android:layout_marginTop="@dimen/margin_top_themes"
        android:layout_marginStart="@dimen/margin_start_themes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/textViewBlueTheme"
        android:layout_marginTop="@dimen/margin_top2_themes"
        android:layout_marginStart="@dimen/margin_start_themes"
        android:textSize="@dimen/textSize_Themes"
        android:text="@string/switch_on_blue_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch4"
        android:layout_marginTop="@dimen/margin_top_themes"
        android:layout_marginStart="@dimen/margin_start_themes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>

