<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextHeader"
        android:background="@null"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="Название"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/margin_start_note_fragment"
        android:textSize="@dimen/text_size_header"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSetDate"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/margin_start_buttonSetDate"
        android:layout_height="wrap_content"
        android:backgroundTint="#90CAF9"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:text="@string/setDate" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewDate"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#C5E1A5"
        android:layout_marginStart="@dimen/margin_start_note_fragment"
        android:alpha="0.6"
        android:textSize="@dimen/text_size_date"
        android:text="@string/date" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextDescription"
        android:background="@null"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_note_fragment"
        android:text=""
        android:hint="Введите текст здесь"
        android:textColor="@color/material_on_surface_emphasis_medium"
        android:textSize="@dimen/text_size_description" />

    <ImageView
        android:id="@+id/imageViewNote"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp">
    </ImageView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:clickable="true"
        app:srcCompat="@drawable/ic_baseline_attach_file_24"
        android:focusable="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDeleteNote"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_width="@dimen/width_buttonDeleteNote"
        android:backgroundTint="#90CAF9"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:layout_height="wrap_content"
        android:text="@string/tetx_delete_note" />

</LinearLayout>


</ScrollView>